Fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   background-color: #171717;
 }
 
